[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/GUI/HealthGUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/GUI/AmmoGUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/GUI/GameTheme.tres" type="Theme" id=3]
[ext_resource path="res://src/GUI/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/GUI/GameGUI.gd" type="Script" id=5]
[ext_resource path="res://src/GUI/ScoreGUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/GUI/GameOverMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/mobile/button_shoot.png" type="Texture" id=9]
[ext_resource path="res://assets/mobile/button_pause.png" type="Texture" id=10]
[ext_resource path="res://assets/mobile/button_jump.png" type="Texture" id=11]
[ext_resource path="res://assets/mobile/button_jump_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/mobile/button_shoot_pressed.png" type="Texture" id=13]
[ext_resource path="res://assets/mobile/button_pause_pressed.png" type="Texture" id=14]

[node name="GameGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.925
anchor_right = 1.0
anchor_bottom = 0.925
margin_top = -80.0
custom_constants/separation = 64
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthGUI" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 37.0
margin_top = 34.0
margin_right = 121.0
margin_bottom = 80.0

[node name="AmmoGUI" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 185.0
margin_top = 34.0
margin_right = 342.0
margin_bottom = 80.0

[node name="ScoreGUI" parent="HBoxContainer" instance=ExtResource( 7 )]
margin_left = 406.0
margin_right = 602.0
margin_bottom = 80.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.9
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="GameOverMenu" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false

[node name="MobileButtons" type="CanvasLayer" parent="."]
layer = 101

[node name="JumpButton" type="TouchScreenButton" parent="MobileButtons"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 40, 352 )
scale = Vector2( 2, 2 )
normal = ExtResource( 11 )
pressed = ExtResource( 12 )
action = "jump"
visibility_mode = 1

[node name="RightAlignment" type="Control" parent="MobileButtons"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackButton" type="TouchScreenButton" parent="MobileButtons/RightAlignment"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( -168, 352 )
scale = Vector2( 2, 2 )
normal = ExtResource( 9 )
pressed = ExtResource( 13 )
action = "attack"
visibility_mode = 1

[node name="PauseButton" type="TouchScreenButton" parent="MobileButtons/RightAlignment"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( -80, 16 )
normal = ExtResource( 10 )
pressed = ExtResource( 14 )
action = "pause"
visibility_mode = 1
